--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <title>JETPACK</title>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script type="text/javascript" src="assets/js/dropzone.js"></script>
+  <script type="text/javascript" src="assets/js/gifonly.js"></script>
   <link rel="stylesheet" href="assets/css/dropzone.css"></link>
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 <body>
-  <form action="/uploads" class="dropzone needsclick dz-clickable">!!!</form>
+  <form action="/uploads" class="dropzone needsclick dz-clickable" id="main-drop"></form>
 </body>
 </html>
