--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <title>JETPACK</title>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script type="text/javascript" src="assets/js/dropzone.js"></script>
-  <script type="text/javascript" src="assets/js/gifonly.js"></script>
-  <link rel="stylesheet" href="assets/css/dropzone.css"></link>
+  <script type="text/javascript" src="js/dropzone.js"></script>
+  <script type="text/javascript" src="js/gifonly.js"></script>
+  <link rel="stylesheet" href="css/dropzone.css"></link>
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
