more webpack bs!!!

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8" />
   <title>JETPACK</title>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script type="text/javascript" src="js/dropzone.js"></script>
-  <script type="text/javascript" src="js/gifonly.js"></script>
+  <script type="text/javascript" src="public/js/index.js"></script>
   <link rel="stylesheet" href="css/dropzone.css"></link>
 </head>
 <body>
